# slapenir

./: .cgr-hash-cache.json  .env.agent  .env.agent.example  .env.example  .env.proxy.example  .gitattributes  .gitignore  .gitmessage  .worktree-session  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  NEXT_STEPS.md  PROGRESS.md  README.md  SECURITY.md  TESTING_IMPROVEMENTS.md  convert_to_md.py  csv_to_markdown.py  dev.sh  diagnose-opencode-terminal-size.sh  docker-compose.yml  docker-compose.yml.bak2  quickstart.sh  run-shell.sh  slapenir  split_csv.py  test-fix-validation.sh  test-opencode-terminal-fix.sh  test-system.sh  test-terminal-network-fix.sh  test-terminal-size-reproduction.sh  test-terminal-size.sh
.claude/: .worktree-context
.claude/docs/gradle-execution-control-opencode-block/: PHASE5-COMPLETE.md
.github/: dependabot.yml
.github/workflows/: README.md  release.yml  release.yml.bak2  security.yml  test.yml
agent/: Dockerfile  README.md  README_GIT_CREDENTIALS.md
agent/config/: AGENTS.md  opencode.json
agent/config/gradle/: gradle.properties
agent/config/npm/: .npmrc
agent/config/pip/: pip.conf
agent/config/yarn/: .yarnrc.yml
agent/s6-overlay/cont-init.d/: 00-fix-permissions  01-traffic-enforcement  02-configure-git  02-populate-huggingface-cache
agent/s6-overlay/s6-rc.d/agent-svc/: finish  run
agent/s6-overlay/s6-rc.d/aider-init/: up
agent/s6-overlay/s6-rc.d/bash-init/: up
agent/s6-overlay/s6-rc.d/build-config/: up
agent/s6-overlay/s6-rc.d/env-dummy-init/: up
agent/s6-overlay/s6-rc.d/env-init/: dependencies  up
agent/s6-overlay/s6-rc.d/git-init/: dependencies  up
agent/s6-overlay/s6-rc.d/gpg-init/: dependencies  up
agent/s6-overlay/s6-rc.d/mcp-verify/: dependencies  up
agent/s6-overlay/s6-rc.d/memgraph-verify/: dependencies  up
agent/s6-overlay/s6-rc.d/metrics/: run
agent/s6-overlay/s6-rc.d/ollama-verify/: up
agent/s6-overlay/s6-rc.d/runtime-monitor/: dependencies  run
agent/s6-overlay/s6-rc.d/ssh-config-init/: up
agent/s6-overlay/s6-rc.d/startup-validation/: dependencies  up
agent/s6-overlay/s6-rc.d/traffic-enforce/: up
agent/s6-overlay/s6-rc.d/user/contents.d/: aider-init  bash-init  git-init  memgraph-verify  ollama-verify
agent/scripts/: agent.py  aider-ollama  bootstrap-certs.sh  cargo-wrapper  cgr-index  cgr-query  check-terminal-size.sh  diagnose-terminal-size.sh  disable-traffic-enforcement.sh  export-dummy-env.sh  generate-dummy-env-from-proxy.sh  generate-dummy-env.sh  git-credential-helper.sh  gradle-wrapper  ingest-knowledge.sh  ingest-markdown.sh  ingest-via-mcp.mjs  init-agent-env.sh  logging_config.py  metrics_exporter.py  mtls_client.py  mvn-wrapper  netctl.c  network-enable.sh  npm-wrapper  ollama-proxy-helper.py  opencode-wrapper  opencode-wrapper.sh  patch-codegraph-rag.sh  pip-wrapper  pip3-wrapper  pnpm-wrapper  preload-huggingface-model.sh  reset-memory.sh  runtime-monitor.sh  setup-bashrc.sh  setup-build-config.sh  setup-git-credentials.sh  setup-gpg.sh  setup-ssh-config.sh  (+9 more)
agent/scripts/lib/: allow-build-trap.sh  build-wrapper.sh  detection.sh  node-fetch-port-fix.js
agent/tests/: run_all_tests.sh  run_security_tests.sh  test_agent.py  test_agent_advanced.py  test_agent_comprehensive.py  test_env_export.sh  test_git_config.sh  test_logging_config.py  test_nodejs_installation.py  test_opencode_logging.sh  test_opencode_permissions.py  test_security_credentials.py  test_startup_validation.py
agent/tests/fixtures/: mock-opencode-session.sh
agent/tests/integration/: test-wrappers.sh
agent/tests/unit/: test-detection.sh
ca-data/config/: ca.json  defaults.json
ca-data/secrets/: intermediate_ca_key  password  root_ca_key
docs/: .markdownlint.json  CHANGELOG_SECURITY_FIXES.md  DEMO-VIDEO-SCRIPT.md  LOCAL_LLM_QUICKSTART.md  LOCAL_LLM_SECURITY.md  NEXT_STEPS.md  PROGRESS.md  SECURITY_AUDIT_2026-02-04.md  SECURITY_INCIDENT_2026-02-02.md  SECURITY_LAYERS.md  SLAPENIR-Technical-Whitepaper.md  SLAPENIR_Architecture.md  SLAPENIR_Git_Strategy.md  SLAPENIR_Risks.md  SLAPENIR_Roadmap.md  SLAPENIR_Specifications.md  SLAPENIR_TDD_Strategy.md  TEST_REPORT.md  mTLS_Setup.md  mcp-knowledge-server-embeddings.md
monitoring/: README.md  prometheus.yml
monitoring/grafana/dashboards/: dashboards.yml  network-isolation.json  slapenir-overview.json
monitoring/grafana/datasources/: prometheus.yml
proxy/: Cargo.toml  Dockerfile  MUTATION_TESTING.md  PERFORMANCE.md  README.md  audit.toml  config.yaml  config.yaml.example  deny.toml
proxy/.cargo/: audit.toml  mutants.toml
proxy/benches/: performance.rs
proxy/migrations/: 01_init.sql  02_seed_data.sql
proxy/src/: auto_detect.rs  builder.rs  config.rs  connect.rs  connect_full.rs  connect_http.rs  connect_middleware.rs  connect_mitm.rs  http_parser.rs  lib.rs  main.rs  metrics.rs  middleware.rs  mtls.rs  proxy.rs  sanitizer.rs  strategy.rs
proxy/src/strategies/: aws_sigv4.rs  mod.rs
proxy/src/tls/: acceptor.rs  ca.rs  cache.rs  error.rs  mod.rs
proxy/tests/: aws_strategy_tests.rs  comprehensive_tests.rs  connect_full_tests.rs  connect_tests.rs  integration_test.rs  property_test.proptest-regressions  property_test.rs  security_bypass_tests.rs  strategy_integration_test.rs  tls_acceptor_tests.rs  tls_ca_tests.rs  tls_test_utils.rs  unit_metrics_tests.rs  unit_sanitizer_tests.rs
proxy/tests/chaos/: fault_injection_tests.rs
proxy/tests/load/: README.md  api_load.js  proxy_sanitization.js  run_all_load_tests.sh  soak_test.js  stress_test.js
proxy/tests/security/: authorization_tests.rs
scripts/: chaos-test.sh  git-clone-with-pat.sh  health-check.sh  init-step-ca.sh  integration-test.sh  setup-git-pat.sh  setup-llama-server.sh  setup-mtls-certs.sh  test-mtls.sh  update-version.sh  validate-startup.sh  verify-local-llm-security.sh  verify-zero-knowledge.sh
