[package]
name = "slapenir-proxy"
version = "1.10.0"
edition = "2021"
authors = ["andrewgibson-cic <andrew.gibson-cic@ibm.com>"]
description = "SLAPENIR Secure Proxy - Zero-Knowledge credential sanitization gateway"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# HTTP server framework
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }

# HTTP client for proxying
hyper = { version = "1.1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }

# TLS support
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pemfile = "2.2"
rustls-pki-types = "1"
rcgen = "=0.12"
x509-parser = "0.18"
pem = "3.0"

# Streaming pattern matching (Aho-Corasick)
aho-corasick = "1.1"

# HTTP parsing
httparse = "1.8"

# Secure memory handling
zeroize = { version = "1.7", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Regular expressions for pattern matching
regex = "1.10"

# AWS Signature V4 support
aws-sigv4 = "1.2"
aws-credential-types = "1.2"
sha2 = "0.11"
hmac = "0.13"
hex = "0.4"
chrono = "0.4"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Environment variables
dotenvy = "0.15"

# Metrics
prometheus = "0.14"
lazy_static = "1.4"

# Database (PostgreSQL for auto-detection)
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "migrate"] }

[dev-dependencies]
# Testing
proptest = "1.4"
criterion = { version = "0.8", features = ["html_reports"] }
mockito = "1.2"
futures = "0.3"
tempfile = "3.8"
tokio-test = "0.4"

[[bench]]
name = "performance"
harness = false
